Move css inline

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Main</title>
-  <style>body { padding: 0; margin: 0; }</style>
+  <style>body,html{font-family:"DIN Alternate";color:#e2dbd8;background-color:red;letter-spacing:11px}.highlighted{color:black}</style>
 </head>
 
 <body>
