Fix modular arithmetic to make sure hour displays right at midday and midnight

--- a/index.html
+++ b/index.html
@@ -6461,7 +6461,7 @@ var $author$project$Main$view = function (model) {
 								_List_fromArray(
 									[
 										$elm$html$Html$Attributes$class(
-										A2($author$project$Main$checkHourHighlighted, 'TWELVE', model))
+										A2($author$project$Main$checkHourHighlighted, 'ZERO', model))
 									]),
 								_List_fromArray(
 									[
